src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_14_environment.snap
---
source: src/tests/let_statement/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "timeout_ms": Integer {
                    value: 5,
                },
                "timeout_ms_copy": Integer {
                    value: 5,
                },
            },
            enclosing: None,
        },
    },
}
