src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_14_lexical_analysis.snap
---
source: src/tests/let_statement/mod.rs
assertion_line: 39
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 2,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "timeout_ms",
        },
        position: Position {
            line: 1,
            column: 6,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 17,
        },
    },
    PositionedToken {
        token: Integer {
            literal: 5,
        },
        position: Position {
            line: 1,
            column: 19,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 20,
        },
    },
    PositionedToken {
        token: Let,
        position: Position {
            line: 2,
            column: 2,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "timeout_ms_copy",
        },
        position: Position {
            line: 2,
            column: 6,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 2,
            column: 22,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "timeout_ms",
        },
        position: Position {
            line: 2,
            column: 24,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 2,
            column: 34,
        },
    },
]
