src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_15_syntax_analysis.snap
---
source: src/tests/let_statement/mod.rs
expression: abstract_syntax_tree
---
[
    Statement {
        statement: Let {
            identifier: "is_file",
            expression: Boolean {
                literal: false,
            },
        },
    },
    Statement {
        statement: Let {
            identifier: "is_directory",
            expression: NotPrefix {
                right_hand: Identifier {
                    identifier: "is_file",
                },
            },
        },
    },
]
