src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_1_environment.snap
---
source: src/tests/let_statement/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "sentence": String {
                    value: "this is a multiple words...\n",
                },
            },
            enclosing: None,
        },
    },
}
