src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_1_lexical_analysis.snap
---
source: src/tests/let_statement/mod.rs
assertion_line: 39
expression: tokens
---
[
    PositionedToken {
        token: Let,
        position: Position {
            line: 1,
            column: 1,
        },
    },
    PositionedToken {
        token: Identifier {
            literal: "sentence",
        },
        position: Position {
            line: 1,
            column: 5,
        },
    },
    PositionedToken {
        token: Assign,
        position: Position {
            line: 1,
            column: 14,
        },
    },
    PositionedToken {
        token: String {
            literal: "this is a multiple words...\n",
        },
        position: Position {
            line: 1,
            column: 16,
        },
    },
    PositionedToken {
        token: SemiColon,
        position: Position {
            line: 1,
            column: 47,
        },
    },
]
