src/tests/let_statement/snapshots/monkey_interpreter__tests__let_statement__test_let_statement_case_2_environment.snap
---
source: src/tests/let_statement/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {
                "csv_content": String {
                    value: "col_1\tcol_2\tcol_3\n",
                },
            },
            enclosing: None,
        },
    },
}
